force-app/main/default/objects/Picklist_Description_Config__mdt/Picklist_Description_Config__mdt.object-meta.xml
<CustomObject>
    <label>Picklist Description Config</label>
    <pluralLabel>Picklist Description Configs</pluralLabel>
</CustomObject>