force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior_in_Kennel__c</fullName>
            </value>
            <value>
                <fullName>Behavior_on_Leash__c</fullName>
            </value>
            <value>
                <fullName>Social_Behavior_P1__c</fullName>
            </value>
            <value>
                <fullName>Social_Behavior_P2_2__c</fullName>
            </value>
            <value>
                <fullName>Pleasant_Touch__c</fullName>
            </value>
            <value>
                <fullName>Unpleasant_Touch_1st__c</fullName>
            </value>
            <value>
                <fullName>Unpleasant_Touch_2nd__c</fullName>
            </value>
            <value>
                <fullName>Play_Test_Tug_P1__c</fullName>
            </value>
            <value>
                <fullName>Play_Test_Tug_P2__c</fullName>
            </value>
            <value>
                <fullName>Tag_Test__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P1_Push_Face__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P2_Push_Face__c</fullName>
            </value>
            <value>
                <fullName>Toddler_Doll_P1__c</fullName>
            </value>
            <value>
                <fullName>Toddler_Doll_P2__c</fullName>
            </value>
            <value>
                <fullName>Scolding_Person_P1__c</fullName>
            </value>
            <value>
                <fullName>Scolding_Person_P2__c</fullName>
            </value>
            <value>
                <fullName>Fake_Dog__c</fullName>
            </value>
            <value>
                <fullName>Same_Sex_P1__c</fullName>
            </value>
            <value>
                <fullName>Same_Sex_P2__c</fullName>
            </value>
            <value>
                <fullName>Same_Sex_P3__c</fullName>
            </value>
            <value>
                <fullName>Opposite_Sex_P1__c</fullName>
            </value>
            <value>
                <fullName>Opposite_Sex_P2__c</fullName>
            </value>
            <value>
                <fullName>Opposite_Sex_P3__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P1_Touch_Face__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P1_Touch_Neck__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P1_Touch_Body__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P2_Touch_Face__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P2_Touch_Neck__c</fullName>
            </value>
            <value>
                <fullName>Resource_Guarding_P2_Touch_Body__c</fullName>
            </value>
            <value>
                <fullName>Puppy_Behavior_in_Kennel__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>