force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <description>Descriptive text for Field</description>
    <label>Field Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>