force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>