force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Picklist_Order__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Order__c</fullName>
    <label>Picklist Display Order</label>
    <length>3</length>
    <type>Text</type>
</CustomField>