force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Test_Config__c.field-meta.xml
<CustomField>
    <fullName>Test_Config__c</fullName>
    <label>Parent Test Config</label>
    <referenceTo>Test_Config__mdt</referenceTo>
    <relationshipLabel>Picklist Description Configs</relationshipLabel>
    <relationshipName>Picklist_Description_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>