force-app/main/default/objects/Picklist_Description_Config__mdt/fields/Value_Category__c.field-meta.xml
<CustomField>
    <fullName>Value_Category__c</fullName>
    <description>Category of Picklist Value. 1= Not Concerning, 2 = Red Flag, 3 = Alert, 4 = Skipped/Inconclusive</description>
    <inlineHelpText>1= Not Concerning, 2 = Red Flag, 3 = Alert, 4 = Skipped/Inconclusive</inlineHelpText>
    <label>Value Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>